unpackaged/main/default/objects/CMPL123CME__Questions_Template_Item__c/CMPL123CME__Questions_Template_Item__c.object-meta.xml
<CustomObject>
    <label>Questions Template Item</label>
    <nameField>
        <displayFormat>QTI-{00000}</displayFormat>
        <label>Questions Template Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>