unpackaged/main/default/objects/CMPL123CME__Questions_Template_Item__c/fields/CMPL123CME__Active__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>