unpackaged/main/default/objects/CMPL123CME__Questions_Template_Item__c/fields/CMPL123CME__Assessment_Comment_Required_Options__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Assessment_Comment_Required_Options__c</fullName>
        <description>Options to make assessment comment required</description>
        <inlineHelpText>Options to make assessment comment required. 
Ex: All,Yes,No,N/A,Don't Know,None 
Note: Can pass multiple values with , separated. Case in-sensitive. None: if no value specified</inlineHelpText>
        <label>Assessment Comment Required Options</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>