unpackaged/main/default/objects/CMPL123CME__Questions_Template_Item__c/fields/CMPL123CME__Is_Comment_Required__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Is_Comment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Comment Required</description>
        <inlineHelpText>Is Comment Required</inlineHelpText>
        <label>Is Comment Required</label>
        <type>Checkbox</type>
    </CustomField>