unpackaged/main/default/objects/CMPL123CME__Questions_Template_Item__c/fields/CMPL123CME__Parent_Item__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Parent_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Item</label>
        <referenceTo>CMPL123CME__Questions_Template_Item__c</referenceTo>
        <relationshipLabel>Questions Template Items</relationshipLabel>
        <relationshipName>Questions_Template_Items</relationshipName>
        <type>Lookup</type>
    </CustomField>