unpackaged/main/default/objects/CMPL123CME__Questions_Template_Item__c/fields/CMPL123CME__Question_Item_Value__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Question_Item_Value__c</fullName>
        <label>Question Item Value</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>