unpackaged/main/default/objects/CMPL123CME__Questions_Template_Item__c/fields/CMPL123CME__Question_Text__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Question_Text__c</fullName>
        <label>Question Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </CustomField>