unpackaged/main/default/objects/CMPL123CME__Questions_Template_Item__c/fields/CMPL123CME__Questions_Template__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Questions_Template__c</fullName>
        <label>Questions Template</label>
        <referenceTo>CMPL123CME__Questions_Template__c</referenceTo>
        <relationshipLabel>Questions Template Items</relationshipLabel>
        <relationshipName>Questions_Template_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>