unpackaged/main/default/objects/CMPL123CME__Questions_Template_Item__c/fields/CMPL123CME__Weight__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>